Fixed projects view on mobile devices

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -14,9 +14,9 @@ html, body {
   font-size: 16px;
 }
 
-@media screen and (max-width: 48em) {
+@media screen and (max-width: 767px) {
   html, body {
-    font-size: 90% !important;
+    font-size: 95% !important;
   }
 }
 
