--- a/src/scss/base/_custom.scss
+++ b/src/scss/base/_custom.scss
@@ -91,7 +91,7 @@
       }
     }
 
-    @media screen and (max-width: 48em) {
+    @media screen and (max-width: 767px) {
       .hero-text {
 
         p {
